# docs/swagger.yaml
@@ -1,5 +1,14 @@
 basePath: /
 definitions:
+  handlers.ChatPaginatedResponse:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/models.Message'
+        type: array
+      meta:
+        $ref: '#/definitions/handlers.PaginationMeta'
+    type: object
   handlers.CreateCategoryRequest:
     properties:
       name:
@@ -35,6 +44,15 @@ definitions:
     required:
     - name
     type: object
+  handlers.EntityPaginatedResponse:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/models.Entity'
+        type: array
+      meta:
+        $ref: '#/definitions/handlers.PaginationMeta'
+    type: object
   handlers.LoginRequest:
     properties:
       email:
@@ -44,6 +62,15 @@ definitions:
     required:
     - email
     - password
+    type: object
+  handlers.PaginationMeta:
+    properties:
+      page:
+        type: integer
+      page_size:
+        type: integer
+      total:
+        type: integer
     type: object
   handlers.RegisterRequest:
     properties:
@@ -506,15 +533,23 @@ paths:
         in: query
         name: user_id
         type: string
+      - default: 1
+        description: Page number
+        in: query
+        name: page
+        type: integer
+      - default: 50
+        description: Items per page
+        in: query
+        name: pageSize
+        type: integer
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/models.Message'
-            type: array
+            $ref: '#/definitions/handlers.ChatPaginatedResponse'
         "400":
           description: Bad Request
           schema:
@@ -567,15 +602,23 @@ paths:
         in: query
         name: category
         type: string
+      - default: 1
+        description: Page number
+        in: query
+        name: page
+        type: integer
+      - default: 20
+        description: Items per page
+        in: query
+        name: pageSize
+        type: integer
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/models.Entity'
-            type: array
+            $ref: '#/definitions/handlers.EntityPaginatedResponse'
         "500":
           description: Internal Server Error
           schema:
